# inner-shelter

./: .gitignore  Cargo.toml  package.json  readme.md
client/: Cargo.toml  Trunk.toml  index.html  package.json
client/src/: create_account.rs  login.rs  main.rs  register.rs
client/src/application/: auth_service.rs  mod.rs  websocket_service.rs
client/src/domain/: models.rs
client/src/infrastructure/: api_client.rs
client/src/presentation/: game.rs  home_page.rs  login.rs  mod.rs  register.rs
game/: Trunk.toml  index.html
game/src/: main.rs
server/: Cargo.toml
server/src/: auth.rs  errors.rs  main.rs  mod.rs
server/src/application/: game_service.rs  login.rs  mod.rs  register.rs  websocket.rs
server/src/auth/: create.rs  jwt.rs  login.rs  mod.rs  register.rs
server/src/components/: session.rs
server/src/domain/: auth.rs  entities.rs  game_repository.rs  mod.rs  user_repository.rs
server/src/game/: components.rs  mod.rs  systems.rs
server/src/game/systems/: game_service.rs
server/src/handlers/: websocket.rs
server/src/infrastructure/: authentication.rs  db.rs  mod.rs
server/src/infrastructure/repository/: mod.rs  redis_game_repository.rs
server/src/presentation/: routes.rs  websocket.rs
server/src/services/: cassandra.rs  mod.rs  redis.rs
service/: Cargo.toml
service/src/: config.rs  main.rs
service/src/domain/: mod.rs
service/src/infrastructure/: authentication.rs  mod.rs
service/src/infrastructure/repository/: mod.rs  redis_game_repository.rs  scylla_user_repository.rs
service/src/presentation/: routes.rs  websocket.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/api/: auth.rs
