[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
leptos = { version = "0.6.15", features = ["csr"] }
gloo-net = "0.6.0"
gloo-utils = "0.2.0"
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "RequestCredentials",
    "console",
    "HtmlElement",
    "KeyboardEvent",
    "WebSocket",
    "MessageEvent",
    "ErrorEvent",
    "Event",
    "BinaryType",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3.72"
async-trait = "0.1.83"
wasm-bindgen-futures = "0.4.45"