[package]
name = "inner-shelter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.210", features = ["derive"] }
scylla = "0.14.0"
tokio = { version = "1.40.0", features = ["full"] }
chrono = "0.4.38"
futures = "0.3.31"
actix-cors = "0.7.0"
bcrypt = "0.15.1"
redis = { version = "0.27.4", features = ["aio", "tokio-comp"] }
futures-util = "0.3.31"
warp = "0.3.7"
uuid = "1.10.0"
serde_urlencoded = "0.7.1"