[package]
name = "service"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-rt = "2.10.0"
actix-ws = "0.3.0"
tokio = { version = "1.40.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
tokio-stream = "0.1.16"
bcrypt = "0.15.1"
chrono = "0.4.38"
jsonwebtoken = "9.3.0"
scylla = "0.14.0"
serde = { version = "1.0.128", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
thiserror = "1.0.64"
async-trait = "0.1.83"
futures = "0.3.31"
futures-util = "0.3.31"
redis = { version = "0.23.0", features = ["tokio-comp"] }